--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 <script>
 
 
-    // jLib.onClick(".click-able",function(){
-    //     console.log("CLicked");
-    // });
+    jLib.onClick(".click-able",function(){
+        console.log("CLicked");
+    });
 
-        jLib.replaceTheseFromString(jLib.selectors,1,"kla.sdj82akjd-asjkdh-#kl.$58ayqkjdqj.)*2i");
+        // jLib.replaceTheseFromString(jLib.selectors,"1","kla.sdj82akjd-asjkdh-#kl.$58ayqkjdqj.)*2i");
 
 </script>
 </body>
